Fix page being too wide when having a scrollbar

--- a/src/style.css
+++ b/src/style.css
@@ -6,8 +6,8 @@
 html,
 body,
 #routify-app {
-	min-height: 100vh;
-	min-width: 100vw;
+	min-height: calc(100vh - (100vh - 100%));
+	min-width: calc(100vw - (100vw - 100%));
 }
 
 .button-blue {
